src/main/parser/YYParser.output
Nonterminals useless in grammar

    RoutineDeclaration
    Parameters
    ParameterDeclaration
    Body
    Statement
    Assignment
    RoutineCall
    WhileLoop
    ForLoop
    Range
    IfStatement


Terminals unused in grammar

    ROUTINE
    RETURN
    WHILE
    FOR
    LOOP
    IF
    THEN
    ELSE
    ASSIGN
    COMMA
    SEMICOLON
    RANGE
    REVERSE
    IN
    NEWLINE
    WHITESPACE
    TAB
    UNKNOWN


Rules useless in grammar

   47 RoutineDeclaration: ROUTINE IDENTIFIER LPAREN Parameters RPAREN IS Body END

   48 Parameters: ParameterDeclaration
   49           | Parameters COMMA ParameterDeclaration

   50 ParameterDeclaration: IDENTIFIER COLON IDENTIFIER

   51 Body: Declaration
   52     | Statement
   53     | Body Declaration
   54     | Body Statement

   55 Statement: Assignment
   56          | RoutineCall
   57          | WhileLoop
   58          | ForLoop
   59          | IfStatement

   60 Assignment: ModifiablePrimary ASSIGN Expression

   61 RoutineCall: IDENTIFIER LPAREN Expression RPAREN

   62 WhileLoop: WHILE Expression LOOP Body END

   63 ForLoop: FOR IDENTIFIER Range LOOP Body END

   64 Range: IN Expression RANGE Expression
   65      | IN REVERSE Expression RANGE Expression

   66 IfStatement: IF Expression THEN Body ELSE Body END
   67            | IF Expression THEN Body END


State 0 conflicts: 2 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Declaration
    2        | Program Declaration
    3        | %empty

    4 Declaration: VariableDeclaration
    5            | TypeDeclaration

    6 VariableDeclaration: VAR IDENTIFIER COLON Type IS Expression
    7                    | VAR IDENTIFIER IS Expression

    8 TypeDeclaration: TYPE IDENTIFIER IS Type

    9 Type: PrimitiveType
   10     | ArrayDeclaration
   11     | RecordDeclaration
   12     | IDENTIFIER

   13 PrimitiveType: INTEGER
   14              | REAL
   15              | BOOLEAN

   16 RecordDeclaration: RECORD VariableDeclaration END

   17 ArrayDeclaration: ARRAY LBRACKET Expression RBRACKET Type

   18 Expression: Relation
   19           | Expression AND Relation
   20           | Expression XOR Relation
   21           | Expression OR Relation

   22 Relation: Simple
   23         | Relation LT Simple
   24         | Relation LE Simple
   25         | Relation GT Simple
   26         | Relation GE Simple
   27         | Relation EQ Simple
   28         | Relation NE Simple

   29 Simple: Factor
   30       | Simple PLUS Factor
   31       | Simple MINUS Factor

   32 Factor: Summand
   33       | Factor MUL Summand
   34       | Factor DIV Summand
   35       | Factor MOD Summand

   36 Summand: Primary
   37        | LPAREN Expression RPAREN

   38 Primary: INTEGERNUMBER
   39        | REALNUMBER
   40        | TRUE
   41        | FALSE
   42        | ModifiablePrimary
   43        | NOT Primary

   44 ModifiablePrimary: IDENTIFIER
   45                  | ModifiablePrimary DOT IDENTIFIER
   46                  | ModifiablePrimary LBRACKET Expression RBRACKET


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    VAR <Token> (258) 6 7
    TYPE <Token> (259) 8
    ROUTINE <Token> (260)
    RETURN <Token> (261)
    IS <Token> (262) 6 7 8
    RECORD <Token> (263) 16
    ARRAY <Token> (264) 17
    WHILE <Token> (265)
    FOR <Token> (266)
    LOOP <Token> (267)
    IF <Token> (268)
    THEN <Token> (269)
    ELSE <Token> (270)
    END <Token> (271) 16
    TRUE <Token> (272) 40
    FALSE <Token> (273) 41
    INTEGER <Token> (274) 13
    REAL <Token> (275) 14
    BOOLEAN <Token> (276) 15
    ASSIGN <Token> (277)
    LT <Token> (278) 23
    LE <Token> (279) 24
    GT <Token> (280) 25
    GE <Token> (281) 26
    EQ <Token> (282) 27
    NE <Token> (283) 28
    PLUS <Token> (284) 30
    MINUS <Token> (285) 31
    MUL <Token> (286) 33
    DIV <Token> (287) 34
    MOD <Token> (288) 35
    AND <Token> (289) 19
    OR <Token> (290) 21
    XOR <Token> (291) 20
    NOT <Token> (292) 43
    IDENTIFIER <Token> (293) 6 7 8 12 44 45
    INTEGERNUMBER <Token> (294) 38
    REALNUMBER <Token> (295) 39
    COMMA <Token> (296)
    SEMICOLON <Token> (297)
    LPAREN <Token> (298) 37
    RPAREN <Token> (299) 37
    LBRACKET <Token> (300) 17 46
    RBRACKET <Token> (301) 17 46
    DOT <Token> (302) 45
    COLON <Token> (303) 6
    RANGE <Token> (304)
    REVERSE <Token> (305)
    IN <Token> (306)
    NEWLINE <Token> (307)
    WHITESPACE <Token> (308)
    TAB <Token> (309)
    UNKNOWN <Token> (310)


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    Program <Program> (57)
        on left: 1 2 3
        on right: 0 2
    Declaration <Declaration> (58)
        on left: 4 5
        on right: 1 2
    VariableDeclaration <VariableDeclaration> (59)
        on left: 6 7
        on right: 4 16
    TypeDeclaration <TypeDeclaration> (60)
        on left: 8
        on right: 5
    Type <Type> (61)
        on left: 9 10 11 12
        on right: 6 8 17
    PrimitiveType <PrimitiveType> (62)
        on left: 13 14 15
        on right: 9
    RecordDeclaration <RecordDeclaration> (63)
        on left: 16
        on right: 11
    ArrayDeclaration <ArrayDeclaration> (64)
        on left: 17
        on right: 10
    Expression <Expression> (65)
        on left: 18 19 20 21
        on right: 6 7 17 19 20 21 37 46
    Relation <Relation> (66)
        on left: 22 23 24 25 26 27 28
        on right: 18 19 20 21 23 24 25 26 27 28
    Simple <Simple> (67)
        on left: 29 30 31
        on right: 22 23 24 25 26 27 28 30 31
    Factor <Factor> (68)
        on left: 32 33 34 35
        on right: 29 30 31 33 34 35
    Summand <Summand> (69)
        on left: 36 37
        on right: 32 33 34 35
    Primary <Primary> (70)
        on left: 38 39 40 41 42 43
        on right: 36 43
    ModifiablePrimary <ModifiablePrimary> (71)
        on left: 44 45 46
        on right: 42 45 46


State 0

    0 $accept: . Program $end

    VAR   shift, and go to state 1
    TYPE  shift, and go to state 2

    VAR       [reduce using rule 3 (Program)]
    TYPE      [reduce using rule 3 (Program)]
    $default  reduce using rule 3 (Program)

    Program              go to state 3
    Declaration          go to state 4
    VariableDeclaration  go to state 5
    TypeDeclaration      go to state 6


State 1

    6 VariableDeclaration: VAR . IDENTIFIER COLON Type IS Expression
    7                    | VAR . IDENTIFIER IS Expression

    IDENTIFIER  shift, and go to state 7


State 2

    8 TypeDeclaration: TYPE . IDENTIFIER IS Type

    IDENTIFIER  shift, and go to state 8


State 3

    0 $accept: Program . $end
    2 Program: Program . Declaration

    $end  shift, and go to state 9
    VAR   shift, and go to state 1
    TYPE  shift, and go to state 2

    Declaration          go to state 10
    VariableDeclaration  go to state 5
    TypeDeclaration      go to state 6


State 4

    1 Program: Declaration .

    $default  reduce using rule 1 (Program)


State 5

    4 Declaration: VariableDeclaration .

    $default  reduce using rule 4 (Declaration)


State 6

    5 Declaration: TypeDeclaration .

    $default  reduce using rule 5 (Declaration)


State 7

    6 VariableDeclaration: VAR IDENTIFIER . COLON Type IS Expression
    7                    | VAR IDENTIFIER . IS Expression

    IS     shift, and go to state 11
    COLON  shift, and go to state 12


State 8

    8 TypeDeclaration: TYPE IDENTIFIER . IS Type

    IS  shift, and go to state 13


State 9

    0 $accept: Program $end .

    $default  accept


State 10

    2 Program: Program Declaration .

    $default  reduce using rule 2 (Program)


State 11

    7 VariableDeclaration: VAR IDENTIFIER IS . Expression

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression         go to state 21
    Relation           go to state 22
    Simple             go to state 23
    Factor             go to state 24
    Summand            go to state 25
    Primary            go to state 26
    ModifiablePrimary  go to state 27


State 12

    6 VariableDeclaration: VAR IDENTIFIER COLON . Type IS Expression

    RECORD      shift, and go to state 28
    ARRAY       shift, and go to state 29
    INTEGER     shift, and go to state 30
    REAL        shift, and go to state 31
    BOOLEAN     shift, and go to state 32
    IDENTIFIER  shift, and go to state 33

    Type               go to state 34
    PrimitiveType      go to state 35
    RecordDeclaration  go to state 36
    ArrayDeclaration   go to state 37


State 13

    8 TypeDeclaration: TYPE IDENTIFIER IS . Type

    RECORD      shift, and go to state 28
    ARRAY       shift, and go to state 29
    INTEGER     shift, and go to state 30
    REAL        shift, and go to state 31
    BOOLEAN     shift, and go to state 32
    IDENTIFIER  shift, and go to state 33

    Type               go to state 38
    PrimitiveType      go to state 35
    RecordDeclaration  go to state 36
    ArrayDeclaration   go to state 37


State 14

   40 Primary: TRUE .

    $default  reduce using rule 40 (Primary)


State 15

   41 Primary: FALSE .

    $default  reduce using rule 41 (Primary)


State 16

   43 Primary: NOT . Primary

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19

    Primary            go to state 39
    ModifiablePrimary  go to state 27


State 17

   44 ModifiablePrimary: IDENTIFIER .

    $default  reduce using rule 44 (ModifiablePrimary)


State 18

   38 Primary: INTEGERNUMBER .

    $default  reduce using rule 38 (Primary)


State 19

   39 Primary: REALNUMBER .

    $default  reduce using rule 39 (Primary)


State 20

   37 Summand: LPAREN . Expression RPAREN

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression         go to state 40
    Relation           go to state 22
    Simple             go to state 23
    Factor             go to state 24
    Summand            go to state 25
    Primary            go to state 26
    ModifiablePrimary  go to state 27


State 21

    7 VariableDeclaration: VAR IDENTIFIER IS Expression .
   19 Expression: Expression . AND Relation
   20           | Expression . XOR Relation
   21           | Expression . OR Relation

    AND  shift, and go to state 41
    OR   shift, and go to state 42
    XOR  shift, and go to state 43

    $default  reduce using rule 7 (VariableDeclaration)


State 22

   18 Expression: Relation .
   23 Relation: Relation . LT Simple
   24         | Relation . LE Simple
   25         | Relation . GT Simple
   26         | Relation . GE Simple
   27         | Relation . EQ Simple
   28         | Relation . NE Simple

    LT  shift, and go to state 44
    LE  shift, and go to state 45
    GT  shift, and go to state 46
    GE  shift, and go to state 47
    EQ  shift, and go to state 48
    NE  shift, and go to state 49

    $default  reduce using rule 18 (Expression)


State 23

   22 Relation: Simple .
   30 Simple: Simple . PLUS Factor
   31       | Simple . MINUS Factor

    PLUS   shift, and go to state 50
    MINUS  shift, and go to state 51

    $default  reduce using rule 22 (Relation)


State 24

   29 Simple: Factor .
   33 Factor: Factor . MUL Summand
   34       | Factor . DIV Summand
   35       | Factor . MOD Summand

    MUL  shift, and go to state 52
    DIV  shift, and go to state 53
    MOD  shift, and go to state 54

    $default  reduce using rule 29 (Simple)


State 25

   32 Factor: Summand .

    $default  reduce using rule 32 (Factor)


State 26

   36 Summand: Primary .

    $default  reduce using rule 36 (Summand)


State 27

   42 Primary: ModifiablePrimary .
   45 ModifiablePrimary: ModifiablePrimary . DOT IDENTIFIER
   46                  | ModifiablePrimary . LBRACKET Expression RBRACKET

    LBRACKET  shift, and go to state 55
    DOT       shift, and go to state 56

    $default  reduce using rule 42 (Primary)


State 28

   16 RecordDeclaration: RECORD . VariableDeclaration END

    VAR  shift, and go to state 1

    VariableDeclaration  go to state 57


State 29

   17 ArrayDeclaration: ARRAY . LBRACKET Expression RBRACKET Type

    LBRACKET  shift, and go to state 58


State 30

   13 PrimitiveType: INTEGER .

    $default  reduce using rule 13 (PrimitiveType)


State 31

   14 PrimitiveType: REAL .

    $default  reduce using rule 14 (PrimitiveType)


State 32

   15 PrimitiveType: BOOLEAN .

    $default  reduce using rule 15 (PrimitiveType)


State 33

   12 Type: IDENTIFIER .

    $default  reduce using rule 12 (Type)


State 34

    6 VariableDeclaration: VAR IDENTIFIER COLON Type . IS Expression

    IS  shift, and go to state 59


State 35

    9 Type: PrimitiveType .

    $default  reduce using rule 9 (Type)


State 36

   11 Type: RecordDeclaration .

    $default  reduce using rule 11 (Type)


State 37

   10 Type: ArrayDeclaration .

    $default  reduce using rule 10 (Type)


State 38

    8 TypeDeclaration: TYPE IDENTIFIER IS Type .

    $default  reduce using rule 8 (TypeDeclaration)


State 39

   43 Primary: NOT Primary .

    $default  reduce using rule 43 (Primary)


State 40

   19 Expression: Expression . AND Relation
   20           | Expression . XOR Relation
   21           | Expression . OR Relation
   37 Summand: LPAREN Expression . RPAREN

    AND     shift, and go to state 41
    OR      shift, and go to state 42
    XOR     shift, and go to state 43
    RPAREN  shift, and go to state 60


State 41

   19 Expression: Expression AND . Relation

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Relation           go to state 61
    Simple             go to state 23
    Factor             go to state 24
    Summand            go to state 25
    Primary            go to state 26
    ModifiablePrimary  go to state 27


State 42

   21 Expression: Expression OR . Relation

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Relation           go to state 62
    Simple             go to state 23
    Factor             go to state 24
    Summand            go to state 25
    Primary            go to state 26
    ModifiablePrimary  go to state 27


State 43

   20 Expression: Expression XOR . Relation

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Relation           go to state 63
    Simple             go to state 23
    Factor             go to state 24
    Summand            go to state 25
    Primary            go to state 26
    ModifiablePrimary  go to state 27


State 44

   23 Relation: Relation LT . Simple

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Simple             go to state 64
    Factor             go to state 24
    Summand            go to state 25
    Primary            go to state 26
    ModifiablePrimary  go to state 27


State 45

   24 Relation: Relation LE . Simple

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Simple             go to state 65
    Factor             go to state 24
    Summand            go to state 25
    Primary            go to state 26
    ModifiablePrimary  go to state 27


State 46

   25 Relation: Relation GT . Simple

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Simple             go to state 66
    Factor             go to state 24
    Summand            go to state 25
    Primary            go to state 26
    ModifiablePrimary  go to state 27


State 47

   26 Relation: Relation GE . Simple

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Simple             go to state 67
    Factor             go to state 24
    Summand            go to state 25
    Primary            go to state 26
    ModifiablePrimary  go to state 27


State 48

   27 Relation: Relation EQ . Simple

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Simple             go to state 68
    Factor             go to state 24
    Summand            go to state 25
    Primary            go to state 26
    ModifiablePrimary  go to state 27


State 49

   28 Relation: Relation NE . Simple

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Simple             go to state 69
    Factor             go to state 24
    Summand            go to state 25
    Primary            go to state 26
    ModifiablePrimary  go to state 27


State 50

   30 Simple: Simple PLUS . Factor

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Factor             go to state 70
    Summand            go to state 25
    Primary            go to state 26
    ModifiablePrimary  go to state 27


State 51

   31 Simple: Simple MINUS . Factor

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Factor             go to state 71
    Summand            go to state 25
    Primary            go to state 26
    ModifiablePrimary  go to state 27


State 52

   33 Factor: Factor MUL . Summand

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Summand            go to state 72
    Primary            go to state 26
    ModifiablePrimary  go to state 27


State 53

   34 Factor: Factor DIV . Summand

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Summand            go to state 73
    Primary            go to state 26
    ModifiablePrimary  go to state 27


State 54

   35 Factor: Factor MOD . Summand

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Summand            go to state 74
    Primary            go to state 26
    ModifiablePrimary  go to state 27


State 55

   46 ModifiablePrimary: ModifiablePrimary LBRACKET . Expression RBRACKET

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression         go to state 75
    Relation           go to state 22
    Simple             go to state 23
    Factor             go to state 24
    Summand            go to state 25
    Primary            go to state 26
    ModifiablePrimary  go to state 27


State 56

   45 ModifiablePrimary: ModifiablePrimary DOT . IDENTIFIER

    IDENTIFIER  shift, and go to state 76


State 57

   16 RecordDeclaration: RECORD VariableDeclaration . END

    END  shift, and go to state 77


State 58

   17 ArrayDeclaration: ARRAY LBRACKET . Expression RBRACKET Type

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression         go to state 78
    Relation           go to state 22
    Simple             go to state 23
    Factor             go to state 24
    Summand            go to state 25
    Primary            go to state 26
    ModifiablePrimary  go to state 27


State 59

    6 VariableDeclaration: VAR IDENTIFIER COLON Type IS . Expression

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression         go to state 79
    Relation           go to state 22
    Simple             go to state 23
    Factor             go to state 24
    Summand            go to state 25
    Primary            go to state 26
    ModifiablePrimary  go to state 27


State 60

   37 Summand: LPAREN Expression RPAREN .

    $default  reduce using rule 37 (Summand)


State 61

   19 Expression: Expression AND Relation .
   23 Relation: Relation . LT Simple
   24         | Relation . LE Simple
   25         | Relation . GT Simple
   26         | Relation . GE Simple
   27         | Relation . EQ Simple
   28         | Relation . NE Simple

    LT  shift, and go to state 44
    LE  shift, and go to state 45
    GT  shift, and go to state 46
    GE  shift, and go to state 47
    EQ  shift, and go to state 48
    NE  shift, and go to state 49

    $default  reduce using rule 19 (Expression)


State 62

   21 Expression: Expression OR Relation .
   23 Relation: Relation . LT Simple
   24         | Relation . LE Simple
   25         | Relation . GT Simple
   26         | Relation . GE Simple
   27         | Relation . EQ Simple
   28         | Relation . NE Simple

    LT  shift, and go to state 44
    LE  shift, and go to state 45
    GT  shift, and go to state 46
    GE  shift, and go to state 47
    EQ  shift, and go to state 48
    NE  shift, and go to state 49

    $default  reduce using rule 21 (Expression)


State 63

   20 Expression: Expression XOR Relation .
   23 Relation: Relation . LT Simple
   24         | Relation . LE Simple
   25         | Relation . GT Simple
   26         | Relation . GE Simple
   27         | Relation . EQ Simple
   28         | Relation . NE Simple

    LT  shift, and go to state 44
    LE  shift, and go to state 45
    GT  shift, and go to state 46
    GE  shift, and go to state 47
    EQ  shift, and go to state 48
    NE  shift, and go to state 49

    $default  reduce using rule 20 (Expression)


State 64

   23 Relation: Relation LT Simple .
   30 Simple: Simple . PLUS Factor
   31       | Simple . MINUS Factor

    PLUS   shift, and go to state 50
    MINUS  shift, and go to state 51

    $default  reduce using rule 23 (Relation)


State 65

   24 Relation: Relation LE Simple .
   30 Simple: Simple . PLUS Factor
   31       | Simple . MINUS Factor

    PLUS   shift, and go to state 50
    MINUS  shift, and go to state 51

    $default  reduce using rule 24 (Relation)


State 66

   25 Relation: Relation GT Simple .
   30 Simple: Simple . PLUS Factor
   31       | Simple . MINUS Factor

    PLUS   shift, and go to state 50
    MINUS  shift, and go to state 51

    $default  reduce using rule 25 (Relation)


State 67

   26 Relation: Relation GE Simple .
   30 Simple: Simple . PLUS Factor
   31       | Simple . MINUS Factor

    PLUS   shift, and go to state 50
    MINUS  shift, and go to state 51

    $default  reduce using rule 26 (Relation)


State 68

   27 Relation: Relation EQ Simple .
   30 Simple: Simple . PLUS Factor
   31       | Simple . MINUS Factor

    PLUS   shift, and go to state 50
    MINUS  shift, and go to state 51

    $default  reduce using rule 27 (Relation)


State 69

   28 Relation: Relation NE Simple .
   30 Simple: Simple . PLUS Factor
   31       | Simple . MINUS Factor

    PLUS   shift, and go to state 50
    MINUS  shift, and go to state 51

    $default  reduce using rule 28 (Relation)


State 70

   30 Simple: Simple PLUS Factor .
   33 Factor: Factor . MUL Summand
   34       | Factor . DIV Summand
   35       | Factor . MOD Summand

    MUL  shift, and go to state 52
    DIV  shift, and go to state 53
    MOD  shift, and go to state 54

    $default  reduce using rule 30 (Simple)


State 71

   31 Simple: Simple MINUS Factor .
   33 Factor: Factor . MUL Summand
   34       | Factor . DIV Summand
   35       | Factor . MOD Summand

    MUL  shift, and go to state 52
    DIV  shift, and go to state 53
    MOD  shift, and go to state 54

    $default  reduce using rule 31 (Simple)


State 72

   33 Factor: Factor MUL Summand .

    $default  reduce using rule 33 (Factor)


State 73

   34 Factor: Factor DIV Summand .

    $default  reduce using rule 34 (Factor)


State 74

   35 Factor: Factor MOD Summand .

    $default  reduce using rule 35 (Factor)


State 75

   19 Expression: Expression . AND Relation
   20           | Expression . XOR Relation
   21           | Expression . OR Relation
   46 ModifiablePrimary: ModifiablePrimary LBRACKET Expression . RBRACKET

    AND       shift, and go to state 41
    OR        shift, and go to state 42
    XOR       shift, and go to state 43
    RBRACKET  shift, and go to state 80


State 76

   45 ModifiablePrimary: ModifiablePrimary DOT IDENTIFIER .

    $default  reduce using rule 45 (ModifiablePrimary)


State 77

   16 RecordDeclaration: RECORD VariableDeclaration END .

    $default  reduce using rule 16 (RecordDeclaration)


State 78

   17 ArrayDeclaration: ARRAY LBRACKET Expression . RBRACKET Type
   19 Expression: Expression . AND Relation
   20           | Expression . XOR Relation
   21           | Expression . OR Relation

    AND       shift, and go to state 41
    OR        shift, and go to state 42
    XOR       shift, and go to state 43
    RBRACKET  shift, and go to state 81


State 79

    6 VariableDeclaration: VAR IDENTIFIER COLON Type IS Expression .
   19 Expression: Expression . AND Relation
   20           | Expression . XOR Relation
   21           | Expression . OR Relation

    AND  shift, and go to state 41
    OR   shift, and go to state 42
    XOR  shift, and go to state 43

    $default  reduce using rule 6 (VariableDeclaration)


State 80

   46 ModifiablePrimary: ModifiablePrimary LBRACKET Expression RBRACKET .

    $default  reduce using rule 46 (ModifiablePrimary)


State 81

   17 ArrayDeclaration: ARRAY LBRACKET Expression RBRACKET . Type

    RECORD      shift, and go to state 28
    ARRAY       shift, and go to state 29
    INTEGER     shift, and go to state 30
    REAL        shift, and go to state 31
    BOOLEAN     shift, and go to state 32
    IDENTIFIER  shift, and go to state 33

    Type               go to state 82
    PrimitiveType      go to state 35
    RecordDeclaration  go to state 36
    ArrayDeclaration   go to state 37


State 82

   17 ArrayDeclaration: ARRAY LBRACKET Expression RBRACKET Type .

    $default  reduce using rule 17 (ArrayDeclaration)
